src/objects/DaScoopComposer__Tracked_Message_Event__c.object
<CustomObject>
    <fields>
        <fullName>DaScoopComposer__Device_OS__c</fullName>
        <label>Device OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Device__c</fullName>
        <inlineHelpText>indicates what device the recipient was most likely using when the email was opened. If this field is blank the device could not be clearly identified (e.g because the recipient is using a Gmail client which obfuscates this information).</inlineHelpText>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Client__c</fullName>
        <inlineHelpText>indicates what email client the recipient was most likely using when the email was opened. If this field is blank the device could not be clearly identified (e.g because the recipient is using a Gmail client which obfuscates this information).</inlineHelpText>
        <label>Email Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__IP_Address__c</fullName>
        <inlineHelpText>Indicates the IP address that triggered the tracked message event</inlineHelpText>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Tracked_Message__c</fullName>
        <inlineHelpText>Indicates the tracked message to which the event belongs</inlineHelpText>
        <label>Tracked Message</label>
        <referenceTo>DaScoopComposer__Tracked_Message__c</referenceTo>
        <relationshipLabel>Tracked Message Events</relationshipLabel>
        <relationshipName>Tracked_Message_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Type__c</fullName>
        <inlineHelpText>Indicates what triggered the tracked message event</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__User_Agent__c</fullName>
        <inlineHelpText>Indicates the raw user agent string of the email client that triggered the tracked message event</inlineHelpText>
        <label>User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__When__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>is the date/time on which this event occurred (i.e. when the email was opened by the recipient).</inlineHelpText>
        <label>When</label>
        <type>DateTime</type>
    </fields>
    <label>Tracked Message Event</label>
    <listViews>
        <fullName>DaScoopComposer__All</fullName>
        <columns>NAME</columns>
        <columns>DaScoopComposer__Tracked_Message__c</columns>
        <columns>DaScoopComposer__Type__c</columns>
        <columns>DaScoopComposer__When__c</columns>
        <columns>DaScoopComposer__Device__c</columns>
        <columns>DaScoopComposer__Device_OS__c</columns>
        <columns>DaScoopComposer__User_Agent__c</columns>
        <columns>DaScoopComposer__Email_Client__c</columns>
        <columns>DaScoopComposer__IP_Address__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Event ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracked Message Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>